fixed time, added username on post index on main post page and by category, changed name again, minor css changes, added file upload to edit page but still need to make it work

--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,12 @@
 
 application/cache/*
 !application/cache/index.html
-
 application/config/database.php
-
 application/logs/*
 !application/logs/index.html
-
 !application/*/.htaccess
+
+assets/images/posts
 
 composer.lock
 
@@ -17,6 +16,7 @@ user_guide_src/build/*
 user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
+
 /vendor/
 
 # IDE Files
